<resources>
    <string name="app_name">Switch-IT</string>
    <string name="backgroundopacity">BackgroundOpacity</string>
    <string name="simple_but_useful">Simple But Useful</string>
    <string name="Simple_But_Useful" />
    <string name="selected_image">Selected Image</string>
    <string name="convert_image_to_png">Convert Image to PNG</string>
    <string name="switch_it">Switch-IT</string>
    <string name="convert_image">Convert Image</string>
    <string name="selectedimage">SelectedImage</string>
    <string name="switch_to_png">SWITCH TO PNG</string>
    <string name="spinner_content_description">Select format</string>
    <string name="error_conversion_failed">Error in conversion</string>
    <string name="error_no_image">No image selected for conversion</string>
    <string name="conversion_successful">Conversion successful: %1$s</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="spinner_format">%1$s</string>
    <string-array name="conversion_formats">
        <item>PNG</item>
        <item>JPEG</item>
        <item>PDF</item>
        <!-- Add other formats as needed -->
    </string-array>
</resources>